Repaired nav element not sticking
Horizontal scroll is still issue on mobile because of this.

--- a/css/base.css
+++ b/css/base.css
@@ -14,11 +14,6 @@
     padding: 0;
 }
 
-html,
-body {
-    overflow-x: hidden;
-}
-
 html {
     scroll-behavior: smooth;
 }
@@ -26,6 +21,7 @@ html {
 body {
     color: #222;
     font-family: 'Roboto', sans-serif;
+    overflow-x: hidden;
     position: relative;
 }
 
